--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,14 +19,18 @@ pages:
     - Home: index.md
     - Morph: morph.md
     - Morph API: morph_api.md
+
 extra_css:
   - 'senselcss/sensel.css'
+  - 'senselcss/docs.css'
   - 'senselcss/MyFontsWebfontsKit.css'
 extra:
   logo: 'img/sensel-logo-white.svg'
   logoalt: 'img/sensel-logo-blue.svg'
   logo_home: 'img/sensel-logo-white.svg'
   org_url: 'http://www.sensel.com/'
+  back_home: 'sensel.com'
+  
   font:
     text: 'Arboria'
   feature:
