--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,9 @@ copyright: 'Copyright &copy; 2017 sensel'
 pages:
     - Home: index.md
     - Morph: morph.md
+    - API primer: api.md
+    - API calls: sensel_h.html
+    - API force calls: sensel_decompress_h.html
 
 extra_css:
   - 'senselcss/sensel.css'
