--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ pages:
     - API primer: api.md
     - API calls: sensel_h.html
     - API force calls: sensel_decompress_h.html
+    - TEMP: art_overlay.md
 
 extra_css:
   - 'senselcss/sensel.css'
