Video Editing Overlay Documentation
Video Editing Overlay Documentation, new Sensel App images, removed wifi symbol, reorganized morph, added advanced to menu

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ pages:
     - Home: index.md
     - Morph: morph.md
     - API primer: api.md
+    - API advanced: api_adv.md
     - API calls: sensel_h.html
     - API force calls: sensel_decompress_h.html
 
