--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ pages:
     - Home: index.md
     - Morph: morph.md
     - SenselApp: app.md
+    - Overlay Designer: designer.md
     - API primer: api.md
     - API advanced: api_adv.md
     - API with Arduino: api_arduino.md
